--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div>
         <h1>
-            Welcome To SASS, Vinit
+            Welcome To SASS, Vinit. B1 has been created
+
         </h1>
 
     </div>
