Changes added to stage and ran git push and now commiting to see if changes are reflecting on github

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div>
         <h1>
-            Welcome To SASS, Vinit. B1 has been created
+            Welcome To SASS, Vinit. B1 has been created.
+            1. Changes added for staging command test.
 
         </h1>
 
